# manifoldr

./: .gitignore  Cargo.toml  README.md  final_output.txt  output.txt  response.json
src/: logging.rs  main.rs  tests.rs  utils.rs
src/api/: client.rs  mod.rs  models.rs
src/cli/: mod.rs
