[package]
name = "manifoldr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
indicatif = "0.17"
futures = "0.3"
url = "2.5"
